objects/TranslationObj2__c.object
<CustomObject>
    <description>desc</description>
    <fields>
        <fullName>field12__c</fullName>
        <description>test desc</description>
        <label>field12</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <description>t4</description>
        <label>field3</label>
        <type>TextArea</type>
    </fields>
    <label>TranslationObj2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TranslationObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TranslationObj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>